# hello-rocket

./: Cargo.toml  LICENSE  README.md  Rocket.toml
src/: db.rs  handle_json.rs  handlers.rs  main.rs  models.rs  schema.rs
static/css/: style.css
templates/: about.html.tera  add_person.html.tera  already_logged.html  base.html.tera  find_one_person.html.tera  genres.html.tera  list_users.html.tera  list_users.html.tera.old  login.html.tera  one_person.html.tera  partitions.html.tera  persons.html.tera  post.html  profile.html  start.html.tera  submission.html
templates/error/: 404.html.tera
